change to use session for auth
+ replace BearerAuth to cookieAuth in swagger
+ add swagger.yaml to nodemon watch list
