# server/src/api/routes/index.js
@@ -6,6 +6,7 @@ import commands from './commands.js'
 import authRouter from './auth.js'
 
 const router = Router()
+router.use(passport.authenticate('session'))
 
 router.get('/', (req, res) => {
   res.send('Hello API!')
@@ -13,15 +14,11 @@ router.get('/', (req, res) => {
 
 router.use('/auth', authRouter)
 router.use('/quests', quests)
-router.use(
-  '/sessions',
-  passport.authenticate('jwt', { session: false, failWithError: true }),
-  sessions
-)
-router.use(
-  '/commands',
-  passport.authenticate('jwt', { session: false, failWithError: true }),
-  commands
-)
+
+const authZone = Router()
+authZone.use('/sessions', sessions)
+authZone.use('/commands', commands)
+
+router.use(authZone)
 
 export default router
